--- a/balise.html
+++ b/balise.html
@@ -17,7 +17,7 @@
 
     <header class="bgc-gris">
 
-        <h1 class="typo-verte">J'écris un titre en HTML</h1>
+        <h1 >J'écris un titre en HTML</h1>
 
         <p>Je veux en dessous de mon titre placer un élement de navigation dans lequel je trouverais 3 liens. Accueil,
             En savoir plus et Mentions légales.</p>
@@ -30,7 +30,7 @@
 
     <nav>
 
-        <ul>
+        <ul> 
             <li><a href="">Accueil</a></li>
             <li><a href="">En savoir plus</a></li>
             <li><a href="">Mentions légales</a></li>
@@ -46,7 +46,7 @@
 
         <section id="section1">
            
-            <h2 class="typo-verte">D'accord mais qu'est ce que c'est HTML?</h2>
+            <h2 >D'accord mais qu'est ce que c'est HTML?</h2>
 
            
 
